c4prj2_input/grade.txt
Grading at Wed Mar 10 09:25:12 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:11:71: error: subscripted value is neither array nor pointer nor vector
   fc->decks[index].cards = realloc(fc->decks[index].cards,(fc->n_decks[index].n_cards+1)*sizeof(*fc->decks[index].cards));
                                                                       ^
future.c:18:7: error: implicit declaration of function ‘add_empty_cards’ [-Werror=implicit-function-declaration]
       add_empty_cards(fc->decks[fc->n_decks].cards);
       ^
future.c:21:73: error: subscripted value is neither array nor pointer nor vector
     fc->decks[index].cards = realloc(fc->decks[index].cards,(fc->n_decks[index].n_cards+1)*sizeof(*fc->decks[index].cards));
                                                                         ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
